# tap-immuta

./: .gitignore  MANIFEST.in  README.md  config.example.json  meltano.yml  pyproject.toml  setup.py
.github/workflows/: publish_package.yml  test_package.yml
new/tap_immuta/: README.md  output.json  pyproject.toml  tap-immuta.sh
new/tap_immuta/tap_immuta/: streams.py  tap.py
new/tap_immuta/tap_immuta/schemas/: project.json  project_member.json
new/tap_immuta/tap_immuta/tests/: test_core.py
old_tap_immuta/: __init__.py  client.py  runner.py  state.py
old_tap_immuta/streams/: __init__.py  audit.py  base.py  data_source.py  project.py
tap_immuta/: __init__.py  auth.py  client.py  streams.py  tap.py
tap_immuta/schemas/: __init__.py  audit.json  audit.py  data_source.json  data_source.py  data_source_dictionary.json  data_source_dictionary.py  data_source_subscription.json  data_source_subscription.py  global_policy.json  global_policy.py  group.json  group.py  iam.json  iam.py  project.json  project.py  project_data_source.json  project_data_source.py  project_member.json  project_member.py  purpose.json  purpose.py  tag.json  tag.py  user.json  user.py
tap_immuta/streams/: __init__.py  audit.py  base.py  data_source.py  data_source_subscription.py  datasource.py  global_policy.py  group.py  project.py  purpose.py  tag.py  user.py
tap_immuta/tests/: test_core.py
tests/: __init__.py  test_core.py
