[tool.poetry]
name = "tap-immuta"
version = "0.2.1"
description = "Singer tap for Immuta built with the Meltano SDK for Singer"
authors = ["Stephen Bailey <stkbailey@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "tap_immuta"}]

[tool.poetry.dependencies]
python = ">=3.6.1,<3.9"
singer-sdk = "^0.3"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-immuta = 'tap_immuta.tap:TapImmuta.cli'