[tool.poetry]
name = "tap-immuta"
version = "0.3.2"
description = "Singer tap for Immuta built with the Meltano SDK for Singer"
authors = ["Stephen Bailey <stkbailey@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/immuta/tap-immuta"
packages = [{include = "tap_immuta"}]
keywords = [
    "singer",
    "elt",
    "replication"
]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Database"
]

[tool.poetry.dependencies]
python = ">=3.6.2,<3.10"
singer-sdk = "^0.3.16"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = "^21.6-beta.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-immuta = 'tap_immuta.tap:TapImmuta.cli'

[tool.black]
line-length = 88
target-version = ['py38']
